# yellowbox-snowglobe

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.MD  CHANGELOG.md  LICENSE  README.md  known_quirks.md  pyproject.toml  setup.cfg
.github/workflows/: check-new-tag.yml  codeql-analysis.yml  label-bump-prs.yml  release.yml  test.yml
scripts/: format.sh  install.sh  lint.sh  unittest.sh
tests/blackbox/: conftest.py  test_connection.py  test_connector.py  test_shows.py  test_simple.py  test_syntax.py
tests/unittest/: test_snow_to_post.py
yellowbox_snowglobe/: __init__.py  api.py  case_mode.py  schema_init.py  service.py  session.py  snow_to_post.py
