[tool.poetry]
name = "yellowbox-snowglobe"
version = "0.2.2"
description = ""
authors = ["Biocatch LTD <serverteam@biocatch.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
yellowbox = { version = ">=0.7.0", extras = ["postgresql", "webserver"] }

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
flake8 = "*"
pytest-cov = "*"
isort = "^5.10.1"
mypy = ">=1"
snowflake-connector-python = "^2.7.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
